--- a/partials/home.html
+++ b/partials/home.html
@@ -114,8 +114,7 @@
             <div class="modal-header">
                 <h4 class="modal-title text-center" style="font-family:'Times New Roman', Times, serif; font-weight: 900">
                     Thông Tin Chi Tiết Học Viên {{_details._id}} <span class="badge  badge-danger" ng-if="_details.Duplicate !== null">Học
-                        Viên bị trùng với TeleSale {{_details.Duplicate[0].prename}} có username là
-                        {{_details.Duplicate[0].preid}}</span></h4>
+                        Viên bị trùng và đã được đăng ký vào {{_details.Duplicate[0].pretime}}</span></h4>
 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -794,6 +793,42 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Modal Thời gian trùng-->
+<div class="modal fade top-150" id="timeduplicate" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="exampleModalLabel">Thời Gian Kiểm Tra Trùng</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form name="passform">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="input-group add">
+                                <label for="ngayhen">Thời gian hiện tại</label>
+                                <input type="text" class="form-control" value="{{auth.TimeForAdmin[0].name}}" disabled>
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="input-group add">
+                                <label for="giohen">Chọn Thời gian</label>
+                                <select class="form-control" ng-model="choose_time_dup" ng-options="option.name for option in list_time_dup">
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <button type="button" class="btn btn-info btn-block" ng-click="updateTimeDup()">Cập Nhật</button>
             </div>
         </div>
     </div>
