--- a/templates/header.html
+++ b/templates/header.html
@@ -19,6 +19,10 @@
                     <i class="material-icons">cast_connected</i>
                     <h4 class="title" style="display:inline-block; vertical-align: text-top;">Kết Nối Groups Telesale</h4>
                 </a>
+                <a class="navbar-brand" href="" ng-click="Time_dupicate()" ng-if="auth.Role[0].id === 0">
+                    <i class="material-icons">access_time</i>
+                    <h4 class="title" style="display:inline-block; vertical-align: text-top;">Thời Gian</h4>
+                </a>
             </div>
             <div class="collapse navbar-collapse justify-content-end">
                 <ul class="navbar-nav">
