--- a/partials/home.html
+++ b/partials/home.html
@@ -806,7 +806,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="exampleModalLabel">Thời Gian Kiểm Tra Trùng</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" ng-click="close_Time()" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
